# thunderfury

./: .env  .gitignore  Cargo.toml  Makefile
app/entity/src/: prelude.rs
app/thunderfury/: Cargo.toml
app/thunderfury/src/: logger.rs  main.rs
app/thunderfury/src/api/: mod.rs  swagger.rs
app/thunderfury/src/api/media/: mod.rs
app/thunderfury/src/entity/: bakery.rs  chef.rs  lib.rs  media.rs  mod.rs  prelude.rs  tv.rs
app/thunderfury/src/migration/: m20220101_000001_create_bakery_table.rs  m20230428_165822_create_media_table.rs  m20230428_165822_create_tv_table.rs  mod.rs
app/thunderfury/src/server/: mod.rs
server/: Cargo.toml
server/resources/test/filename_parser/: tv.yml
server/src/: logger.rs  main.rs
server/src/api/: error.rs  genre.rs  mod.rs  subscription.rs  swagger.rs  test.rs
server/src/api/model/: mod.rs  movie.rs  subscription.rs  tv.rs
server/src/common/: error.rs  mod.rs
server/src/entity/: episode.rs  genre.rs  mod.rs  movie.rs  prelude.rs  season.rs  subscription.rs  tv.rs
server/src/job/: mod.rs
server/src/migration/: m20230428_165822_create_tv_table.rs  m20230510_050508_create_season_table.rs  m20230510_051935_create_episode_table.rs  m20230602_104150_create_movie_table.rs  m20230602_104200_create_genre_table.rs  m20230602_104209_create_subscription_table.rs  mod.rs
server/src/utils/: mod.rs
server/src/utils/filename_parser/: episode.rs  lang.rs  mod.rs  title.rs
src/: main.rs
