[package]
name = "thunderfury"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "0.11", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "0.11", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
backtrace = "0.3"
clap = { version = "4.2.5", features = ["derive"] }
time = { version = "0.3.20" }
utoipa = { version = "3", features = ["actix_extras", "non_strict_integers"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web", "debug-embed"] }
reqwest = { version = "0.11.17", features = ["native-tls", "json", "gzip", "deflate"] }
anyhow = "1.0"
thiserror = "1.0"
config = { version = "0.13.1", features = ["toml"] }
