[package]
name = "thunderfury"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
futures = "0.3"
tokio = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["trace"] }

entity = { path = "../entity" }
