[package]
name = "thunderfury"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
futures = "0.3"
tokio = { version = "1.27.0", features = ["full"] }
sea-orm = { version = "0.11", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.11", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
backtrace = "0.3"
tower-http = { version = "0.4", features = ["trace"] }
clap = { version = "4.2.5", features = ["derive"] }
time = { version = "0.3.20" }
